# ai-wordpores

./: .env.example  .gitignore  LICENSE  Makefile  README.md  note  pyproject.toml
autobot/: __init__.py  cli.py  config.py  db.py  dedup.py  discovery.py  imaging.py  monitor.py  orchestrator.py  planner.py  publisher.py  research.py  rules.py  seo.py  sources.py  taxonomy.py  writer.py
autobot/prompts/: rewriter_variants.txt  writer_en.txt  writer_zh.txt
autobot/templates/: article_prompt.txt  cover_prompt.txt  disclaimer.html  expired_banner.html  faq_prompt.txt
config/: schedule.yml  sources.yml  thresholds.yml
